corpus/cpp/scope_declaration/case-01/snapshots/gcc15_plus/dual_sink_structured/render.verbose.txt
error: identifier not found in scope
--> src/main.cpp:2:12
help: check for typos, missing #include, or missing namespace qualifier
why: 'missing_value' was not declared in this scope
| src/main.cpp:2:12
|     return missing_value;
|            ^
debug: rule_id=rule.family.scope_declaration.message_terms
debug: matched_conditions=message_contains=was not declared in this scope, phase=semantic
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output